// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewAnimalPage tests Should render Species/Acquisition page after lists are loaded. 1`] = `
<div>
  <div
    className="split-panel"
  >
    <div
      className="parent-panel"
    >
      <div
        className="panel-heading"
        disabled={false}
      >
        <p>
          Species and Acquisition Type
        </p>
      </div>
      <div
        className="species-panel"
        disabled={false}
      >
        <SpeciesPanel
          disabled={false}
          handleAcquisitionOptionChange={[Function]}
          handleSpeciesChange={[Function]}
          newAnimalData={
            Object {
              "acqDate": Object {
                "date": "1970-01-01T00:00:00.000Z",
              },
              "acquisitionType": undefined,
              "animalAccount": undefined,
              "bdStatus": undefined,
              "birthDate": Object {
                "date": "1970-01-01T00:00:00.000Z",
              },
              "cage": Object {
                "value": undefined,
              },
              "colony": undefined,
              "dam": undefined,
              "diet": undefined,
              "gender": undefined,
              "iacuc": undefined,
              "id": undefined,
              "ownerInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "pedigree": undefined,
              "responsibleInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "room": undefined,
              "selectedOption": undefined,
              "sire": undefined,
              "sourceLocation": undefined,
              "species": undefined,
            }
          }
          speciesList={
            Array [
              Object {
                "arcSpeciesCode": "CJ",
                "id": 0,
                "label": "CTJ (CJ) - Callithrix spp./Marmoset",
                "value": "CTJ",
              },
              Object {
                "arcSpeciesCode": "MM",
                "id": 1,
                "label": "MML (MM) - Macaca mulatta/Rhesus",
                "value": "MML",
              },
              Object {
                "arcSpeciesCode": "PC",
                "id": 2,
                "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                "value": "PCA",
              },
            ]
          }
        />
      </div>
      <div
        className="fade-in"
      >
        <div
          className="panel-heading"
          disabled={true}
        >
          <p>
            Acquisition
          </p>
        </div>
        <div
          className="wizard-panel"
          disabled={true}
        >
          <AcquisitionPanel
            acquisitionTypeList={Array []}
            disabled={true}
            handleDataChange={[Function]}
            handleNumAnimalChange={[Function]}
            newAnimalData={
              Object {
                "acqDate": Object {
                  "date": "1970-01-01T00:00:00.000Z",
                },
                "acquisitionType": undefined,
                "animalAccount": undefined,
                "bdStatus": undefined,
                "birthDate": Object {
                  "date": "1970-01-01T00:00:00.000Z",
                },
                "cage": Object {
                  "value": undefined,
                },
                "colony": undefined,
                "dam": undefined,
                "diet": undefined,
                "gender": undefined,
                "iacuc": undefined,
                "id": undefined,
                "ownerInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "pedigree": undefined,
                "responsibleInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "room": undefined,
                "selectedOption": undefined,
                "sire": undefined,
                "sourceLocation": undefined,
                "species": undefined,
              }
            }
            preventNext={[Function]}
            sourceLocationList={
              Array [
                Object {
                  "id": 0,
                  "label": "1001 - New Iberia Research Center U of LA at Lafayette, Lafayette, LA, USA",
                  "rowId": 1593,
                  "value": 1001,
                },
                Object {
                  "id": 1,
                  "label": "1009 - Chimp Haven, Keithville, LA, USA",
                  "rowId": 1601,
                  "value": 1009,
                },
                Object {
                  "id": 2,
                  "label": "1010 - SNBL USA Ltd., Everett, WA, USA",
                  "rowId": 1602,
                  "value": 1010,
                },
              ]
            }
          />
        </div>
      </div>
      <div>
        <Pager
          bsClass="pager"
          className="pager-container"
        >
          <PagerItem
            disabled={true}
            next={false}
            onClick={[Function]}
            previous={true}
          >
            ← Previous Page
          </PagerItem>
          <PagerItem
            disabled={false}
            next={true}
            onClick={[Function]}
            previous={false}
          >
            Next Page →
          </PagerItem>
          <PagerItem
            disabled={false}
            next={false}
            onClick={[Function]}
            previous={false}
          >
            Cancel
          </PagerItem>
        </Pager>
      </div>
    </div>
    <div
      className="right-panel"
    >
      <div>
        <div
          className="panel-heading"
        >
          <p>
            New Animals (Saved)
          </p>
        </div>
        <div
          className="wizard-right"
        >
          <SummaryGridPanel
            print={[Function]}
            summaryData={Array []}
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <SaveModal
      newAnimalData={
        Object {
          "acqDate": Object {
            "date": "1970-01-01T00:00:00.000Z",
          },
          "acquisitionType": undefined,
          "animalAccount": undefined,
          "bdStatus": undefined,
          "birthDate": Object {
            "date": "1970-01-01T00:00:00.000Z",
          },
          "cage": Object {
            "value": undefined,
          },
          "colony": undefined,
          "dam": undefined,
          "diet": undefined,
          "gender": undefined,
          "iacuc": undefined,
          "id": undefined,
          "ownerInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "pedigree": undefined,
          "responsibleInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "room": undefined,
          "selectedOption": undefined,
          "sire": undefined,
          "sourceLocation": undefined,
          "species": undefined,
        }
      }
      onCloseClick={[Function]}
      onSaveClick={[Function]}
      show={false}
    />
    <CancelChangeModal
      message="If you cancel now, you will lose unsaved changes. Are you sure you want to cancel?"
      noClick={[Function]}
      show={false}
      title="Cancel changes?"
      yesClick={[Function]}
    />
    <CancelChangeModal
      message="If you change species now, you will lose your current changes. Are you sure you want to change species?"
      noClick={[Function]}
      show={false}
      title="Changes Species?"
      yesClick={[Function]}
    />
  </div>
</div>
`;

exports[`NewAnimalPage tests Should render a loading spinner    before api calls. 1`] = `
<LoadingSpinner
  msg="Loading lookup tables..."
  wrapperClassName="loading-spinner"
/>
`;

exports[`NewAnimalPage tests Should render demographics page 1`] = `
<div>
  <div
    className="split-panel"
  >
    <div
      className="parent-panel"
    >
      <div
        className="panel-heading"
        disabled={true}
      >
        <p>
          Species and Acquisition Type
        </p>
      </div>
      <div
        className="species-panel"
        disabled={true}
      >
        <SpeciesPanel
          disabled={true}
          handleAcquisitionOptionChange={[Function]}
          handleSpeciesChange={[Function]}
          newAnimalData={
            Object {
              "acqDate": Object {
                "date": "2020-06-09T20:00:00.000Z",
              },
              "acquisitionType": undefined,
              "animalAccount": undefined,
              "bdStatus": Object {
                "id": 0,
                "label": "Day/Month/Year OK",
                "value": 0,
              },
              "birthDate": Object {
                "date": "2020-06-09T20:00:00.000Z",
              },
              "cage": Object {
                "value": undefined,
              },
              "colony": undefined,
              "dam": Object {
                "Age": 24.7,
                "ArcSpeciesCode": "PC",
                "id": 0,
                "label": "12924",
                "value": "12924",
              },
              "diet": undefined,
              "gender": Object {
                "label": "Female",
                "value": "F",
              },
              "iacuc": undefined,
              "id": undefined,
              "ownerInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "pedigree": undefined,
              "responsibleInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "room": undefined,
              "selectedOption": undefined,
              "sire": Object {
                "Age": 22.8,
                "ArcSpeciesCode": "PC",
                "id": 0,
                "label": "14022",
                "value": "14022",
              },
              "sourceLocation": undefined,
              "species": Object {
                "arcSpeciesCode": "PC",
                "id": 10,
                "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                "value": "PCA",
              },
            }
          }
          speciesList={
            Array [
              Object {
                "arcSpeciesCode": "CJ",
                "id": 0,
                "label": "CTJ (CJ) - Callithrix spp./Marmoset",
                "value": "CTJ",
              },
              Object {
                "arcSpeciesCode": "MM",
                "id": 1,
                "label": "MML (MM) - Macaca mulatta/Rhesus",
                "value": "MML",
              },
              Object {
                "arcSpeciesCode": "PC",
                "id": 2,
                "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                "value": "PCA",
              },
            ]
          }
        />
      </div>
      <div
        className="fade-in"
      >
        <div
          className="panel-heading"
          disabled={true}
        >
          <p>
            Demographics
          </p>
        </div>
        <div
          className="wizard-panel"
          disabled={true}
        >
          <DemographicsPanel
            bdStatusList={
              Array [
                Object {
                  "id": 0,
                  "label": "Day/Month/Year OK",
                  "value": 0,
                },
                Object {
                  "id": 1,
                  "label": "Month/Year OK",
                  "value": 1,
                },
                Object {
                  "id": 2,
                  "label": "Year OK",
                  "value": 2,
                },
              ]
            }
            disabled={true}
            handleDataChange={[Function]}
            newAnimalData={
              Object {
                "acqDate": Object {
                  "date": "2020-06-09T20:00:00.000Z",
                },
                "acquisitionType": undefined,
                "animalAccount": undefined,
                "bdStatus": Object {
                  "id": 0,
                  "label": "Day/Month/Year OK",
                  "value": 0,
                },
                "birthDate": Object {
                  "date": "2020-06-09T20:00:00.000Z",
                },
                "cage": Object {
                  "value": undefined,
                },
                "colony": undefined,
                "dam": Object {
                  "Age": 24.7,
                  "ArcSpeciesCode": "PC",
                  "id": 0,
                  "label": "12924",
                  "value": "12924",
                },
                "diet": undefined,
                "gender": Object {
                  "label": "Female",
                  "value": "F",
                },
                "iacuc": undefined,
                "id": undefined,
                "ownerInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "pedigree": undefined,
                "responsibleInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "room": undefined,
                "selectedOption": undefined,
                "sire": Object {
                  "Age": 22.8,
                  "ArcSpeciesCode": "PC",
                  "id": 0,
                  "label": "14022",
                  "value": "14022",
                },
                "sourceLocation": undefined,
                "species": Object {
                  "arcSpeciesCode": "PC",
                  "id": 10,
                  "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                  "value": "PCA",
                },
              }
            }
            potentialDamList={
              Array [
                Object {
                  "Age": 24.7,
                  "ArcSpeciesCode": "PC",
                  "id": 0,
                  "label": "12924",
                  "value": "12924",
                },
                Object {
                  "Age": 20.3,
                  "ArcSpeciesCode": "PC",
                  "id": 1,
                  "label": "16006",
                  "value": "16006",
                },
                Object {
                  "Age": 19.8,
                  "ArcSpeciesCode": "PC",
                  "id": 2,
                  "label": "16243",
                  "value": "16243",
                },
              ]
            }
            potentialSireList={
              Array [
                Object {
                  "Age": 22.8,
                  "ArcSpeciesCode": "PC",
                  "id": 0,
                  "label": "14022",
                  "value": "14022",
                },
                Object {
                  "Age": 21.5,
                  "ArcSpeciesCode": "PC",
                  "id": 1,
                  "label": "15009",
                  "value": "15009",
                },
                Object {
                  "Age": 20.4,
                  "ArcSpeciesCode": "PC",
                  "id": 2,
                  "label": "15945",
                  "value": "15945",
                },
              ]
            }
            preventNext={[Function]}
            reloadDamsAndSires={[Function]}
          />
        </div>
      </div>
      <InfoPanel
        errorMessages={
          Array [
            Object {
              "colName": "Cannot read property 'value' of undefined",
              "propTest": true,
            },
          ]
        }
      />
      <div>
        <Pager
          bsClass="pager"
          className="pager-container"
        >
          <PagerItem
            disabled={false}
            next={false}
            onClick={[Function]}
            previous={true}
          >
            ← Previous Page
          </PagerItem>
          <PagerItem
            disabled={false}
            next={true}
            onClick={[Function]}
            previous={false}
          >
            Next Page →
          </PagerItem>
          <PagerItem
            disabled={false}
            next={false}
            onClick={[Function]}
            previous={false}
          >
            Cancel
          </PagerItem>
        </Pager>
      </div>
    </div>
    <div
      className="right-panel"
    >
      <div>
        <div
          className="panel-heading"
        >
          <p>
            New Animals (Saved)
          </p>
        </div>
        <div
          className="wizard-right"
        >
          <SummaryGridPanel
            print={[Function]}
            summaryData={Array []}
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <SaveModal
      newAnimalData={
        Object {
          "acqDate": Object {
            "date": "2020-06-09T20:00:00.000Z",
          },
          "acquisitionType": undefined,
          "animalAccount": undefined,
          "bdStatus": Object {
            "id": 0,
            "label": "Day/Month/Year OK",
            "value": 0,
          },
          "birthDate": Object {
            "date": "2020-06-09T20:00:00.000Z",
          },
          "cage": Object {
            "value": undefined,
          },
          "colony": undefined,
          "dam": Object {
            "Age": 24.7,
            "ArcSpeciesCode": "PC",
            "id": 0,
            "label": "12924",
            "value": "12924",
          },
          "diet": undefined,
          "gender": Object {
            "label": "Female",
            "value": "F",
          },
          "iacuc": undefined,
          "id": undefined,
          "ownerInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "pedigree": undefined,
          "responsibleInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "room": undefined,
          "selectedOption": undefined,
          "sire": Object {
            "Age": 22.8,
            "ArcSpeciesCode": "PC",
            "id": 0,
            "label": "14022",
            "value": "14022",
          },
          "sourceLocation": undefined,
          "species": Object {
            "arcSpeciesCode": "PC",
            "id": 10,
            "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
            "value": "PCA",
          },
        }
      }
      onCloseClick={[Function]}
      onSaveClick={[Function]}
      show={false}
    />
    <CancelChangeModal
      message="If you cancel now, you will lose unsaved changes. Are you sure you want to cancel?"
      noClick={[Function]}
      show={false}
      title="Cancel changes?"
      yesClick={[Function]}
    />
    <CancelChangeModal
      message="If you change species now, you will lose your current changes. Are you sure you want to change species?"
      noClick={[Function]}
      show={false}
      title="Changes Species?"
      yesClick={[Function]}
    />
  </div>
</div>
`;

exports[`Should render Account page 1`] = `
<div>
  <div
    className="split-panel"
  >
    <div
      className="parent-panel"
    >
      <div
        className="panel-heading"
        disabled={true}
      >
        <p>
          Species and Acquisition Type
        </p>
      </div>
      <div
        className="species-panel"
        disabled={true}
      >
        <SpeciesPanel
          disabled={true}
          handleAcquisitionOptionChange={[Function]}
          handleSpeciesChange={[Function]}
          newAnimalData={
            Object {
              "acqDate": Object {
                "date": "2020-06-09T20:00:00.000Z",
              },
              "acquisitionType": undefined,
              "animalAccount": undefined,
              "bdStatus": undefined,
              "birthDate": Object {
                "date": "1970-01-01T00:00:00.000Z",
              },
              "cage": Object {
                "value": undefined,
              },
              "colony": undefined,
              "dam": undefined,
              "diet": undefined,
              "gender": undefined,
              "iacuc": undefined,
              "id": undefined,
              "ownerInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "pedigree": undefined,
              "responsibleInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "room": undefined,
              "selectedOption": undefined,
              "sire": undefined,
              "sourceLocation": undefined,
              "species": Object {
                "arcSpeciesCode": "PC",
                "id": 10,
                "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                "value": "PCA",
              },
            }
          }
          speciesList={
            Array [
              Object {
                "arcSpeciesCode": "CJ",
                "id": 0,
                "label": "CTJ (CJ) - Callithrix spp./Marmoset",
                "value": "CTJ",
              },
              Object {
                "arcSpeciesCode": "MM",
                "id": 1,
                "label": "MML (MM) - Macaca mulatta/Rhesus",
                "value": "MML",
              },
              Object {
                "arcSpeciesCode": "PC",
                "id": 2,
                "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                "value": "PCA",
              },
            ]
          }
        />
      </div>
      <div
        className="fade-in"
      >
        <div
          className="panel-heading"
          disabled={true}
        >
          <p>
            Account, Colony, and Ownership
          </p>
        </div>
        <div
          className="wizard-panel"
          disabled={true}
        >
          <AccountPanel
            accountList={
              Array [
                Object {
                  "id": 0,
                  "label": "0060-014-00 - Giavedoni 1497PC, Natural resistance of baboon cells to SIV infection",
                  "value": "0060-014-00",
                },
                Object {
                  "id": 1,
                  "label": "0063-010-50 - Lanford 1295PT, Combination therapy for HCV",
                  "value": "0063-010-50",
                },
                Object {
                  "id": 2,
                  "label": "0063-010-51 - Tardif 1243SM, Tamarin Breeding and Production Colony, Lanford animals",
                  "value": "0063-010-51",
                },
              ]
            }
            colonyList={Array []}
            disabled={true}
            handleDataChange={[Function]}
            iacucList={Array []}
            institutionList={
              Array [
                Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                Object {
                  "id": 1,
                  "label": "NHLBI - National Heart, Lung, Blood Institute",
                  "value": 2,
                },
                Object {
                  "id": 2,
                  "label": "ISIS - International Species Information System",
                  "value": 3,
                },
              ]
            }
            newAnimalData={
              Object {
                "acqDate": Object {
                  "date": "2020-06-09T20:00:00.000Z",
                },
                "acquisitionType": undefined,
                "animalAccount": undefined,
                "bdStatus": undefined,
                "birthDate": Object {
                  "date": "1970-01-01T00:00:00.000Z",
                },
                "cage": Object {
                  "value": undefined,
                },
                "colony": undefined,
                "dam": undefined,
                "diet": undefined,
                "gender": undefined,
                "iacuc": undefined,
                "id": undefined,
                "ownerInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "pedigree": undefined,
                "responsibleInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "room": undefined,
                "selectedOption": undefined,
                "sire": undefined,
                "sourceLocation": undefined,
                "species": Object {
                  "arcSpeciesCode": "PC",
                  "id": 10,
                  "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                  "value": "PCA",
                },
              }
            }
            pedigreeList={Array []}
            preventNext={[Function]}
          />
        </div>
      </div>
      <InfoPanel
        errorMessages={
          Array [
            Object {
              "colName": "Cannot read property 'value' of undefined",
              "propTest": true,
            },
          ]
        }
      />
      <div>
        <Pager
          bsClass="pager"
          className="pager-container"
        >
          <PagerItem
            disabled={false}
            next={false}
            onClick={[Function]}
            previous={true}
          >
            ← Previous Page
          </PagerItem>
          <PagerItem
            disabled={false}
            next={true}
            onClick={[Function]}
            previous={false}
          >
            Next Page →
          </PagerItem>
          <PagerItem
            disabled={false}
            next={false}
            onClick={[Function]}
            previous={false}
          >
            Cancel
          </PagerItem>
        </Pager>
      </div>
    </div>
    <div
      className="right-panel"
    >
      <div>
        <div
          className="panel-heading"
        >
          <p>
            New Animals (Saved)
          </p>
        </div>
        <div
          className="wizard-right"
        >
          <SummaryGridPanel
            print={[Function]}
            summaryData={Array []}
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <SaveModal
      newAnimalData={
        Object {
          "acqDate": Object {
            "date": "2020-06-09T20:00:00.000Z",
          },
          "acquisitionType": undefined,
          "animalAccount": undefined,
          "bdStatus": undefined,
          "birthDate": Object {
            "date": "1970-01-01T00:00:00.000Z",
          },
          "cage": Object {
            "value": undefined,
          },
          "colony": undefined,
          "dam": undefined,
          "diet": undefined,
          "gender": undefined,
          "iacuc": undefined,
          "id": undefined,
          "ownerInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "pedigree": undefined,
          "responsibleInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "room": undefined,
          "selectedOption": undefined,
          "sire": undefined,
          "sourceLocation": undefined,
          "species": Object {
            "arcSpeciesCode": "PC",
            "id": 10,
            "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
            "value": "PCA",
          },
        }
      }
      onCloseClick={[Function]}
      onSaveClick={[Function]}
      show={false}
    />
    <CancelChangeModal
      message="If you cancel now, you will lose unsaved changes. Are you sure you want to cancel?"
      noClick={[Function]}
      show={false}
      title="Cancel changes?"
      yesClick={[Function]}
    />
    <CancelChangeModal
      message="If you change species now, you will lose your current changes. Are you sure you want to change species?"
      noClick={[Function]}
      show={false}
      title="Changes Species?"
      yesClick={[Function]}
    />
  </div>
</div>
`;

exports[`Should render Diet page 1`] = `
<div>
  <div
    className="split-panel"
  >
    <div
      className="parent-panel"
    >
      <div
        className="panel-heading"
        disabled={true}
      >
        <p>
          Species and Acquisition Type
        </p>
      </div>
      <div
        className="species-panel"
        disabled={true}
      >
        <SpeciesPanel
          disabled={true}
          handleAcquisitionOptionChange={[Function]}
          handleSpeciesChange={[Function]}
          newAnimalData={
            Object {
              "acqDate": Object {
                "date": "2020-06-09T20:00:00.000Z",
              },
              "acquisitionType": undefined,
              "animalAccount": undefined,
              "bdStatus": undefined,
              "birthDate": Object {
                "date": "1970-01-01T00:00:00.000Z",
              },
              "cage": Object {
                "value": undefined,
              },
              "colony": undefined,
              "dam": undefined,
              "diet": undefined,
              "gender": undefined,
              "iacuc": undefined,
              "id": undefined,
              "ownerInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "pedigree": undefined,
              "responsibleInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "room": undefined,
              "selectedOption": undefined,
              "sire": undefined,
              "sourceLocation": undefined,
              "species": Object {
                "arcSpeciesCode": "PC",
                "id": 10,
                "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                "value": "PCA",
              },
            }
          }
          speciesList={
            Array [
              Object {
                "arcSpeciesCode": "CJ",
                "id": 0,
                "label": "CTJ (CJ) - Callithrix spp./Marmoset",
                "value": "CTJ",
              },
              Object {
                "arcSpeciesCode": "MM",
                "id": 1,
                "label": "MML (MM) - Macaca mulatta/Rhesus",
                "value": "MML",
              },
              Object {
                "arcSpeciesCode": "PC",
                "id": 2,
                "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                "value": "PCA",
              },
            ]
          }
        />
      </div>
      <div
        className="fade-in"
      >
        <div
          className="panel-heading"
          disabled={true}
        >
          <p>
            Diet
          </p>
        </div>
        <div
          className="wizard-panel"
          disabled={true}
        >
          <DietPanel
            dietList={
              Array [
                Object {
                  "id": 0,
                  "label": "AQUA",
                  "species": null,
                  "value": 3,
                },
                Object {
                  "id": 1,
                  "label": "AQUA/GREEN",
                  "species": null,
                  "value": 4,
                },
                Object {
                  "id": 2,
                  "label": "BLACK",
                  "species": null,
                  "value": 5,
                },
              ]
            }
            disabled={true}
            handleDataChange={[Function]}
            newAnimalData={
              Object {
                "acqDate": Object {
                  "date": "2020-06-09T20:00:00.000Z",
                },
                "acquisitionType": undefined,
                "animalAccount": undefined,
                "bdStatus": undefined,
                "birthDate": Object {
                  "date": "1970-01-01T00:00:00.000Z",
                },
                "cage": Object {
                  "value": undefined,
                },
                "colony": undefined,
                "dam": undefined,
                "diet": undefined,
                "gender": undefined,
                "iacuc": undefined,
                "id": undefined,
                "ownerInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "pedigree": undefined,
                "responsibleInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "room": undefined,
                "selectedOption": undefined,
                "sire": undefined,
                "sourceLocation": undefined,
                "species": Object {
                  "arcSpeciesCode": "PC",
                  "id": 10,
                  "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                  "value": "PCA",
                },
              }
            }
            preventNext={[Function]}
          />
        </div>
      </div>
      <InfoPanel
        errorMessages={
          Array [
            Object {
              "colName": "Cannot read property 'value' of undefined",
              "propTest": true,
            },
          ]
        }
      />
      <div>
        <Pager
          bsClass="pager"
          className="pager-container"
        >
          <PagerItem
            disabled={false}
            next={false}
            onClick={[Function]}
            previous={true}
          >
            ← Previous Page
          </PagerItem>
          <PagerItem
            disabled={false}
            next={false}
            onClick={[Function]}
            previous={false}
          >
            Cancel
          </PagerItem>
          <PagerItem
            disabled={false}
            next={true}
            onClick={[Function]}
            previous={false}
          >
            Save
          </PagerItem>
        </Pager>
      </div>
    </div>
    <div
      className="right-panel"
    >
      <div>
        <div
          className="panel-heading"
        >
          <p>
            New Animals (Saved)
          </p>
        </div>
        <div
          className="wizard-right"
        >
          <SummaryGridPanel
            print={[Function]}
            summaryData={Array []}
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <SaveModal
      newAnimalData={
        Object {
          "acqDate": Object {
            "date": "2020-06-09T20:00:00.000Z",
          },
          "acquisitionType": undefined,
          "animalAccount": undefined,
          "bdStatus": undefined,
          "birthDate": Object {
            "date": "1970-01-01T00:00:00.000Z",
          },
          "cage": Object {
            "value": undefined,
          },
          "colony": undefined,
          "dam": undefined,
          "diet": undefined,
          "gender": undefined,
          "iacuc": undefined,
          "id": undefined,
          "ownerInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "pedigree": undefined,
          "responsibleInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "room": undefined,
          "selectedOption": undefined,
          "sire": undefined,
          "sourceLocation": undefined,
          "species": Object {
            "arcSpeciesCode": "PC",
            "id": 10,
            "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
            "value": "PCA",
          },
        }
      }
      onCloseClick={[Function]}
      onSaveClick={[Function]}
      show={false}
    />
    <CancelChangeModal
      message="If you cancel now, you will lose unsaved changes. Are you sure you want to cancel?"
      noClick={[Function]}
      show={false}
      title="Cancel changes?"
      yesClick={[Function]}
    />
    <CancelChangeModal
      message="If you change species now, you will lose your current changes. Are you sure you want to change species?"
      noClick={[Function]}
      show={false}
      title="Changes Species?"
      yesClick={[Function]}
    />
  </div>
</div>
`;

exports[`Should render Location page 1`] = `
<div>
  <div
    className="split-panel"
  >
    <div
      className="parent-panel"
    >
      <div
        className="panel-heading"
        disabled={true}
      >
        <p>
          Species and Acquisition Type
        </p>
      </div>
      <div
        className="species-panel"
        disabled={true}
      >
        <SpeciesPanel
          disabled={true}
          handleAcquisitionOptionChange={[Function]}
          handleSpeciesChange={[Function]}
          newAnimalData={
            Object {
              "acqDate": Object {
                "date": "2020-06-09T20:00:00.000Z",
              },
              "acquisitionType": undefined,
              "animalAccount": undefined,
              "bdStatus": undefined,
              "birthDate": Object {
                "date": "1970-01-01T00:00:00.000Z",
              },
              "cage": Object {
                "value": undefined,
              },
              "colony": undefined,
              "dam": undefined,
              "diet": undefined,
              "gender": undefined,
              "iacuc": undefined,
              "id": undefined,
              "ownerInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "pedigree": undefined,
              "responsibleInstitution": Object {
                "id": 0,
                "label": "TxBiomed - Texas Biomedical Research Institute",
                "value": 1,
              },
              "room": undefined,
              "selectedOption": undefined,
              "sire": undefined,
              "sourceLocation": undefined,
              "species": Object {
                "arcSpeciesCode": "PC",
                "id": 10,
                "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                "value": "PCA",
              },
            }
          }
          speciesList={
            Array [
              Object {
                "arcSpeciesCode": "CJ",
                "id": 0,
                "label": "CTJ (CJ) - Callithrix spp./Marmoset",
                "value": "CTJ",
              },
              Object {
                "arcSpeciesCode": "MM",
                "id": 1,
                "label": "MML (MM) - Macaca mulatta/Rhesus",
                "value": "MML",
              },
              Object {
                "arcSpeciesCode": "PC",
                "id": 2,
                "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                "value": "PCA",
              },
            ]
          }
        />
      </div>
      <div
        className="fade-in"
      >
        <div
          className="panel-heading"
          disabled={true}
        >
          <p>
            Location
          </p>
        </div>
        <div
          className="wizard-panel"
          disabled={true}
        >
          <LocationPanel
            disabled={true}
            handleDataChange={[Function]}
            handleError={[Function]}
            locationList={Array []}
            newAnimalData={
              Object {
                "acqDate": Object {
                  "date": "2020-06-09T20:00:00.000Z",
                },
                "acquisitionType": undefined,
                "animalAccount": undefined,
                "bdStatus": undefined,
                "birthDate": Object {
                  "date": "1970-01-01T00:00:00.000Z",
                },
                "cage": Object {
                  "value": undefined,
                },
                "colony": undefined,
                "dam": undefined,
                "diet": undefined,
                "gender": undefined,
                "iacuc": undefined,
                "id": undefined,
                "ownerInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "pedigree": undefined,
                "responsibleInstitution": Object {
                  "id": 0,
                  "label": "TxBiomed - Texas Biomedical Research Institute",
                  "value": 1,
                },
                "room": undefined,
                "selectedOption": undefined,
                "sire": undefined,
                "sourceLocation": undefined,
                "species": Object {
                  "arcSpeciesCode": "PC",
                  "id": 10,
                  "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
                  "value": "PCA",
                },
              }
            }
            preventNext={[Function]}
          />
        </div>
      </div>
      <InfoPanel
        errorMessages={
          Array [
            Object {
              "colName": "Cannot read property 'value' of undefined",
              "propTest": true,
            },
          ]
        }
      />
      <div>
        <Pager
          bsClass="pager"
          className="pager-container"
        >
          <PagerItem
            disabled={false}
            next={false}
            onClick={[Function]}
            previous={true}
          >
            ← Previous Page
          </PagerItem>
          <PagerItem
            disabled={false}
            next={true}
            onClick={[Function]}
            previous={false}
          >
            Next Page →
          </PagerItem>
          <PagerItem
            disabled={false}
            next={false}
            onClick={[Function]}
            previous={false}
          >
            Cancel
          </PagerItem>
        </Pager>
      </div>
    </div>
    <div
      className="right-panel"
    >
      <div>
        <div
          className="panel-heading"
        >
          <p>
            New Animals (Saved)
          </p>
        </div>
        <div
          className="wizard-right"
        >
          <SummaryGridPanel
            print={[Function]}
            summaryData={Array []}
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <SaveModal
      newAnimalData={
        Object {
          "acqDate": Object {
            "date": "2020-06-09T20:00:00.000Z",
          },
          "acquisitionType": undefined,
          "animalAccount": undefined,
          "bdStatus": undefined,
          "birthDate": Object {
            "date": "1970-01-01T00:00:00.000Z",
          },
          "cage": Object {
            "value": undefined,
          },
          "colony": undefined,
          "dam": undefined,
          "diet": undefined,
          "gender": undefined,
          "iacuc": undefined,
          "id": undefined,
          "ownerInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "pedigree": undefined,
          "responsibleInstitution": Object {
            "id": 0,
            "label": "TxBiomed - Texas Biomedical Research Institute",
            "value": 1,
          },
          "room": undefined,
          "selectedOption": undefined,
          "sire": undefined,
          "sourceLocation": undefined,
          "species": Object {
            "arcSpeciesCode": "PC",
            "id": 10,
            "label": "PCA (PC) - Papio hamadryas anubis/Baboon",
            "value": "PCA",
          },
        }
      }
      onCloseClick={[Function]}
      onSaveClick={[Function]}
      show={false}
    />
    <CancelChangeModal
      message="If you cancel now, you will lose unsaved changes. Are you sure you want to cancel?"
      noClick={[Function]}
      show={false}
      title="Cancel changes?"
      yesClick={[Function]}
    />
    <CancelChangeModal
      message="If you change species now, you will lose your current changes. Are you sure you want to change species?"
      noClick={[Function]}
      show={false}
      title="Changes Species?"
      yesClick={[Function]}
    />
  </div>
</div>
`;
